--- a/src/Assembly/Metro/Controls/PageTemplates/Games/HaloMap.xaml
+++ b/src/Assembly/Metro/Controls/PageTemplates/Games/HaloMap.xaml
@@ -47,10 +47,12 @@
 					<TabItem Header="Map Information" Style="{StaticResource MetroHeaderTabItem}" Height="15.96" Margin="18,0,-18,-15"
 					         VerticalAlignment="Bottom">
 						<Grid>
-							<TextBlock x:Name="lblMapName" FontFamily="{DynamicResource MetroFontLight}" Text="" Foreground="White"
+                            <StackPanel>
+                                <TextBlock x:Name="lblMapName" FontFamily="{DynamicResource MetroFontLight}" Text="" Foreground="White"
 							           FontSize="32" Margin="25,35.5,7,0" Height="50" VerticalAlignment="Top"
 							           TextTrimming="CharacterEllipsis" />
-							<ed:RegularPolygon Fill="#FF4A4A4C" HorizontalAlignment="Left" Height="19" InnerRadius="1" Margin="-18,51,0,0"
+                            </StackPanel>
+                            <ed:RegularPolygon Fill="#FF4A4A4C" HorizontalAlignment="Left" Height="19" InnerRadius="1" Margin="-18,51,0,0"
 							                   PointCount="3" Stretch="Fill" VerticalAlignment="Top" Width="48"
 							                   RenderTransformOrigin="0.5,0.5">
 								<ed:RegularPolygon.RenderTransform>
@@ -63,45 +65,54 @@
 								</ed:RegularPolygon.RenderTransform>
 							</ed:RegularPolygon>
 
-							<Rectangle Fill="#FF363639" Height="1" Margin="25,114.25,25,0" VerticalAlignment="Top"
+
+                            <StackPanel>
+
+                                <Rectangle Fill="#FF363639" Height="1" Margin="25,114.25,25,0" VerticalAlignment="Top"
 							           d:LayoutOverrides="Height" />
 
-							<ScrollViewer Margin="25,130,20,25" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-								<StackPanel>
-									<ScrollViewer VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
-										<StackPanel>
-											<TextBlock x:Name="lblMapHeader" FontFamily="{DynamicResource MetroFontSemiLight}" Text=""
+                                <Image x:Name="imageMap" Margin="5,5,5,5"></Image>
+                                <TextBlock FontFamily="{DynamicResource MetroFontLight}" Foreground="Gray" FontSize="18"
+                                           Margin="5,0,5,0" x:Name="textMapDescription" TextWrapping="Wrap"></TextBlock>
+
+
+                                <ScrollViewer Margin="25,15,20,25" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                                    <StackPanel>
+                                        <ScrollViewer VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
+                                            <StackPanel>
+                                                <TextBlock x:Name="lblMapHeader" FontFamily="{DynamicResource MetroFontSemiLight}" Text=""
 											           Foreground="White" FontSize="16" />
-											<TextBlock x:Name="lblDblClick" Text="Double-click on a value to copy it."
+                                                <TextBlock x:Name="lblDblClick" Text="Double-click on a value to copy it."
 											           Style="{StaticResource GenericTextblock}" Visibility="Collapsed" />
 
-											<ItemsControl x:Name="panelHeaderItems" ItemsSource="{Binding}" Margin="0,10,0,5">
-												<ItemsControl.ItemTemplate>
-													<DataTemplate>
-														<StackPanel Orientation="Horizontal">
-															<TextBlock Text="{Binding Title}" Foreground="White" FontFamily="{DynamicResource MetroFontRegular}" />
-															<TextBlock Text="{Binding Data }" MouseDown="HeaderValueData_MouseDown" Margin="10,0,0,0"
+                                                <ItemsControl x:Name="panelHeaderItems" ItemsSource="{Binding}" Margin="0,10,0,5">
+                                                    <ItemsControl.ItemTemplate>
+                                                        <DataTemplate>
+                                                            <StackPanel Orientation="Horizontal">
+                                                                <TextBlock Text="{Binding Title}" Foreground="White" FontFamily="{DynamicResource MetroFontRegular}" />
+                                                                <TextBlock Text="{Binding Data }" MouseDown="HeaderValueData_MouseDown" Margin="10,0,0,0"
 															           TextTrimming="CharacterEllipsis" Foreground="{DynamicResource ExtryzeAccentBrushSecondary}"
 															           FontFamily="{DynamicResource MetroFontRegular}" />
-														</StackPanel>
-													</DataTemplate>
-												</ItemsControl.ItemTemplate>
+                                                            </StackPanel>
+                                                        </DataTemplate>
+                                                    </ItemsControl.ItemTemplate>
 
-												<ItemsControl.ItemsPanel>
-													<ItemsPanelTemplate>
-														<StackPanel />
-													</ItemsPanelTemplate>
-												</ItemsControl.ItemsPanel>
-											</ItemsControl>
-										</StackPanel>
-									</ScrollViewer>
+                                                    <ItemsControl.ItemsPanel>
+                                                        <ItemsPanelTemplate>
+                                                            <StackPanel />
+                                                        </ItemsPanelTemplate>
+                                                    </ItemsControl.ItemsPanel>
+                                                </ItemsControl>
+                                            </StackPanel>
+                                        </ScrollViewer>
 
-									<Rectangle Fill="#FF363639" Height="1" Margin="0,20,0,20" VerticalAlignment="Top"
+                                        <Rectangle Fill="#FF363639" Height="1" Margin="0,20,0,20" VerticalAlignment="Top"
 									           d:LayoutOverrides="Height" />
 
-								</StackPanel>
-							</ScrollViewer>
-						</Grid>
+                                    </StackPanel>
+                                </ScrollViewer>
+                            </StackPanel>
+                        </Grid>
 					</TabItem>
 
 					<TabItem x:Name="tabTags" Header="Tags" Style="{StaticResource MetroHeaderTabItem}" Height="15.96" Margin="18,0,-18,-15"
